--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,25 @@
     display: flex;
     justify-content: center;
     width: 100%;
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 h3 {
     margin: 10px;
     text-align: center;
     font-size: 200%;
+}
+h2 {
+    margin: 10px;
+    text-align: center;
+    font-size: 100%;
+    color: red;
 }
 .tools{
     text-align: center;
