--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,35 @@
-
+html{
+    height: 100%;
+}
+body{
+    background-color: #393E46;
+    height: 100%;
+    margin: 0px;
+}
+.title{
+    color: white;
+    margin: 0px;
+}
+p{
+    color: white;
+}
 .container{
     display: flex;
     justify-content: center;
-    width: 100%;
-
+    align-items: center;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    flex-grow: 7;
+    height: 45%;
+}
+.tools{
+    text-align: center;
+    flex-grow: 1;
+    height: 45%;
 }
 
 h3 {
@@ -23,7 +43,15 @@ h2 {
     font-size: 100%;
     color: red;
 }
-.tools{
-    text-align: center;
-    margin: 5px;
+.displayWindow{
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+}
+.lower{
+    display: flex;
+    height: 90%;
+}
+.upper {
+    height: 10%;
 }
