--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,8 @@ p{
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    flex-grow: 7;
-    height: 45%;
+    flex-grow: 5;
+    height: 47%;
 }
 .tools{
 
@@ -54,4 +54,21 @@ h2 {
 }
 .upper {
     height: 10%;
+}
+
+.tools h1{
+    color: white;
+    font-weight: bold;
+    font-size: 45px;
+    margin: 0;
+}
+
+.tools h2{
+    color: white;
+    text-align: left;
+    margin: 0, 3px;
+    text-decoration: underline;
+}
+.tools p{
+    margin: 4px;
 }
